[package]
name = "retroachievements-rom-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "*", features = ["json", "blocking"] }
serde_json = "1.0.140"
rust-fuzzy-search = "0.1.1"
md5 = "0.8.0"
toml = "0.8.23"
tabled = "0.20.0"
walkdir = "2.5.0"
zip = "4.2.0"
